samples/_failures_safe/1761555841_13c078_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92d2c7ea.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_92d2c7ea.c:193:12: error: missing terminating " character
  193 |     printf("Dijkstra
      |            ^~~~~~~~~
./samples/SAFE/__tmp_92d2c7ea.c:193:5: error: expected expression at end of input
  193 |     printf("Dijkstra
      |     ^~~~~~
./samples/SAFE/__tmp_92d2c7ea.c:193:5: error: expected declaration or statement at end of input
